test/files/neg/t12159/s.scala
// javaVersion: 17+

package p

class S extends H {
}

trait T extends I {
}

class Z extends ZZ // fail compile: remove when source flags are restored
